fix header-bg gap

--- a/app/assets/stylesheets/plus/style.css
+++ b/app/assets/stylesheets/plus/style.css
@@ -1069,7 +1069,7 @@ select option{margin: 5px;}
 #page1 header {padding-bottom:0;}
 .right_l{float:right;}
 .header-bg {background:#202020;
-height: 111px;
+height: 90px;
 }
 
 h1 {
